Update docs for running SL with tip of graal.